# app/openapi/model_organization.go
@@ -1,0 +1,38 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Lanyard Ops API
+ *
+ * The Lanyard Ops API simplifies API key management for organizations by providing powerful tools to create, manage, and monitor API access securely. It allows teams to generate scoped API keys, configure rate limits, track usage, and integrate seamlessly with existing services.
+ *
+ * API version: 1.0
+ * Contact: info@payloadops.com
+ */
+
+package openapi
+
+// Organization -
+type Organization struct {
+
+	//
+	Id string `json:"id,omitempty"`
+
+	//
+	Domain string `json:"domain,omitempty"`
+
+	//
+	Name string `json:"name,omitempty"`
+
+	//
+	StripeAccountId string `json:"stripeAccountId,omitempty"`
+}
+
+// AssertOrganizationRequired checks if the required fields are not zero-ed
+func AssertOrganizationRequired(obj Organization) error {
+	return nil
+}
+
+// AssertOrganizationConstraints checks if the values respects the defined constraints
+func AssertOrganizationConstraints(obj Organization) error {
+	return nil
+}
